add dist directory

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/Jumpaku/playing-cards.git"
   },
-  "author": "",
+  "author": "Jumpaku, ",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/Jumpaku/playing-cards/issues"
