--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - "./:/app/:delegated"
     ports:
-      - "8080:80"
+      - "${SERVER_PORT}:80"
 
   db:
     image: postgres:15.1-bullseye
@@ -22,4 +22,4 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8081:8080
+      - "${ADMINER_PORT}:8080"
