--- a/.env.default
+++ b/.env.default
@@ -1,5 +1,9 @@
+#アプリケーションのデプロイ先 (local | staging | production)
+APP_STAGE=local
+
 #アプリケーションのポート番号
 APP_PORT=8080
 
 #データベースビューアのポート番号
 ADMINER_PORT=8081
+
