add me to author

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/Jumpaku/playing-cards.git"
   },
-  "author": "Jumpaku, ",
+  "author": "Jumpaku, chu-ta, ",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/Jumpaku/playing-cards/issues"
