build(github actions): fix check script

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,5 +27,8 @@ jobs:
         continue-on-error: true
         run: npm list
 
+      - name: Define environmental variables
+        run: cp .env.default .env
+
       - name: Install dependencies and check lint, compile, and test
         run: docker-compose run check
