--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0"
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint-config-prettier": "^8.5.0"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
