--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
-    "@types/uuid": "^9.0.0",
+    "@types/yargs": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint-config-prettier": "^8.5.0"
@@ -25,6 +25,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "io-ts": "^2.2.19",
-    "uuid": "^9.0.0"
+    "yargs": "^17.6.2"
   }
 }
