--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "homepage": "https://github.com/Jumpaku/playing-cards#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
     "@types/yargs": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
-    "eslint-config-prettier": "^8.5.0"
+    "eslint-config-prettier": "^8.5.0",
+    "ts-jest": "^29.0.3"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
