--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
+    "@types/pg": "^8.6.6",
     "@types/yargs": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
@@ -27,6 +28,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "io-ts": "^2.2.19",
+    "pg": "^8.8.0",
     "yargs": "^17.6.2"
   }
 }
