--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "homepage": "https://github.com/Jumpaku/playing-cards#readme",
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.24",
+    "@swc/jest": "^0.2.24",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
